# naive-search

./: .gitignore  DEVELOPMENT.md  README.md  buildspec.yaml  pipeline.yaml  sam.yaml  schema.sql
app/: app.js  config.js  db.js  lambda.js  package.json
app/config/: development.json
app/models/: search.js
app/public/stylesheets/: style.css
app/routes/: index.js  search.js
app/views/: index.pug  search.pug
db/: schema.sql  test.csv
import/: warsql-ec2-optimized
import/warsql/: CMakeLists.txt  extract.wat  main.cpp
import/warsql/libwarc/: author.md
